<resources>
    <string name="app_name">HandyApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? Signup</string>
    <string name="emailhint">example123@domain.com</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="house_painting">House Painting</string>
    <string name="car_rental">Car Rental</string>
    <string name="plumbing">Plumbing</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="photography">Photography</string>
    <string name="food_service">Food Service</string>

</resources>