<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/categoryArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinsbold"
                android:padding="10dp"
                android:text="@string/categories"
                android:textAllCaps="true"
                android:textColor="@color/purple_700"
                android:textSize="30sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_margin="20dp">


                    <TextView
                        android:id="@+id/housePainting"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/LightYellow"
                        android:contextClickable="true"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center_vertical"
                        android:onClick="whichTextClicked"
                        android:padding="20dp"
                        android:text="House Painting"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/rounded_corner"
                    android:src="@drawable/ic_paiting" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"

                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/carRental"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/LightYellow"
                        android:fontFamily="@font/poppinsbold"
                        android:onClick="whichTextClicked"
                        android:padding="20dp"
                        android:text="@string/car_rental"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/ic_taxi" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"

                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/plumbing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/LightYellow"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center_vertical"
                        android:onClick="whichTextClicked"
                        android:padding="20dp"
                        android:text="@string/plumbing"
                        android:textColor="@color/black"
                        android:textSize="24sp" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/ic_plumbing" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"

                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/cleaningService"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/LightYellow"
                        android:fontFamily="@font/poppinsbold"
                        android:onClick="whichTextClicked"
                        android:padding="20dp"
                        android:text="@string/cleaning_service"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="24sp" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="-5dp"
                    android:src="@drawable/ic_cleaning" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"

                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/photography"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/LightYellow"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center_vertical"
                        android:onClick="whichTextClicked"
                        android:padding="20dp"
                        android:text="@string/photography"
                        android:textColor="@color/black"
                        android:textSize="24sp" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/ic_camera" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"

                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/foodService"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:backgroundTint="@color/LightYellow"
                        android:fontFamily="@font/poppinsbold"
                        android:onClick="whichTextClicked"
                        android:padding="20dp"
                        android:text="@string/food_service"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="24sp" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="-5dp"
                    android:src="@drawable/ic_foodservice" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>